--- a/payment.html
+++ b/payment.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payment</title>
 </head>
 <body>
-    <a href="payment.html">Pay</a>
+    Payment form
 </body>
 </html>
