--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <script>Yandex metrika</script>
+</head>g
 <body>
     <a href="payment.html">Pay</a>
 </body>
